--- a/app/src/main/res-tools/layout/fragment_tools.xml
+++ b/app/src/main/res-tools/layout/fragment_tools.xml
@@ -4,8 +4,20 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <include
-        android:id="@+id/normal_view"
-        layout="@layout/include_home_weather" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/menu_type_rv"
+            android:layout_width="@dimen/dp_70"
+            android:layout_height="wrap_content" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/food_type_rv"
+            android:layout_width="@dimen/dp_70"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </FrameLayout>
