--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@drawable/blue_gradient_bg"
+    app:layout_scrollFlags="scroll|enterAlways"
     app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
-    app:layout_scrollFlags="scroll|enterAlways">
+    app:titleTextColor="@color/white">
 
     <TextView
         android:id="@+id/common_toolbar_title_tv"
@@ -16,5 +17,6 @@
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_16"
+        android:visibility="gone"
         tools:text="开发环境" />
 </android.support.v7.widget.Toolbar>
