--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#617AB4</color>
     <color name="colorAccent">#1E90FF</color>
 
+    <color name="black">#000</color>
     <color name="transparent">#00000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray5a">#5a5a5a</color>
