--- a/app/src/main/res-tools/layout/item_travel_note_detail.xml
+++ b/app/src/main/res-tools/layout/item_travel_note_detail.xml
@@ -27,7 +27,7 @@
         android:id="@+id/travel_note_content_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_20"
+        android:layout_marginBottom="@dimen/dp_10"
         android:textColor="#FF484848"
         android:textIsSelectable="true"
         android:textSize="@dimen/sp_14"
@@ -37,9 +37,10 @@
     <ImageView
         android:id="@+id/travel_note_iv"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_150"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_20"
-        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         android:visibility="visible"
         tools:background="@tools:sample/avatars" />
 
