--- a/app/src/main/res/layout/ac_showpicture.xml
+++ b/app/src/main/res/layout/ac_showpicture.xml
@@ -4,9 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include
-        android:id="@+id/title_layout"
-        layout="@layout/common_toolbar" />
+    <include layout="@layout/common_toolbar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
